<resources>
    <string name="app_name">Value Indicators</string>

    <string name="title_section1">Circle</string>
    <string name="title_section2">Line</string>
    <string name="title_section3">Pie</string>
    <string name="title_section4">Half Pie</string>
    <string name="title_section5">Quarter pie</string>
    <string name="title_section6">Triangle</string>

    <string name="navigation_drawer_open">Opened</string>
    <string name="navigation_drawer_close">Closeed</string>

    <string name="outer_radius">Outer radius</string>
    <string name="inner_radius">Inner radius</string>
    <string name="start_angle">Start angle</string>
    <string name="anim_duration">Animation ms</string>
    <string name="draw_direction">Draw direction</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="corner_radius">Corner radius</string>
</resources>
