<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/outer_radius"/>

        <SeekBar
            android:id="@+id/seek_radius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_margin="5dp"
            android:progress="20"
            android:max="40"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/inner_radius"/>

        <SeekBar
            android:id="@+id/seek_inner_radius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_margin="5dp"
            android:progress="50"
            android:max="100"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/orientation"/>

        <SeekBar
            android:id="@+id/seek_orientation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_margin="5dp"
            android:progress="0"
            android:max="3"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/anim_duration"/>

        <SeekBar
            android:id="@+id/seek_animation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_margin="5dp"
            android:progress="100"
            android:max="2000"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/draw_direction"/>

        <SeekBar
            android:id="@+id/seek_direction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_margin="5dp"
            android:progress="0"
            android:max="1"
            />
    </LinearLayout>

    <com.pletikosa.indicators.pie.HalfPieIndicator
        android:id="@+id/half_pie_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:main_color="@color/blue"
        app:background_color="@color/background"
        app:pie_center_paint="@color/app_background"/>

</LinearLayout>
